Added: Mobile Support

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -14,11 +14,9 @@
 <body>
     <section id="welcome">
         <div class="opaque">
-            <nav>
-                <div class="title">
-                    <p><i class="fa fa-linux" aria-hidden="true"></i> RonOS</p>
-                </div>
-            </nav>
+            <div class="title">
+                <p><i class="fa fa-linux" aria-hidden="true"></i> RonOS</p>
+            </div>
             <div class="content">
                 <h1>Redefining Computing...</h1>
                 <p>...for Everybody!</p>
