Added: Page Footer

--- a/index.html
+++ b/index.html
@@ -51,11 +51,21 @@
                 <a class="button" href="#">MD5-Checksum</a>
                 <a class="button" href="#">License</a>
             </div>
+            <a href="#footer" class="arrow_down"></a>
         </div>
-        <a href="#footer" class="arrow_down"></a>
     </section>
     <section id="footer">
-    
+        <div class="opaque">
+            <a href="#welcome" class="arrow_up"></a>
+            <div class="content">
+                <h1>Any futher Questions?</h1>
+                <p><a class="button" href="http://ronos.org/">Visit RonOS.org now!</a></p>
+            </div>
+            <div class="copyright">
+                <p>Published under GNUv3. <a class="link" href="https://github.com/RonOSLinux/ronoslinux.github.io">Fork me on GitHub!</a><br/>
+                   Written by Robin Krause.</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
